--- a/aip.tex
+++ b/aip.tex
@@ -454,7 +454,7 @@ then we would get a matrix obtained by replacing some rows of $A$ with zero.
    \medskip
    
    If we go the other way, though, we should say right away that we will use coordinates with respect to the basis\footnote{Ordering the basis vectors, say, the natural way: by increasing indices.} $\rb(\O)^\perp$  to identify $\rs(\O)^\perp$ with $\RR^{\#\rb(\O)^\perp}$.
-   OR, perhaps better, leave $\rs(\O)^\perp$ alone, and just define collapse as the composition
+   OR, perhaps better, leave $\rs(\O)^\perp$ alone---don't make any identification---but define collapse as the composition of the maps
    \[\RR^d \stackrel{\text{proj}}{\longrightarrow} \rs(\O)^\perp \stackrel{\approx}{\longrightarrow} \RR^{\#\rb(\O)^\perp}.\]
    This seems to be how you're thinking of collapses.
 }
